# bili-auto

./: .dockerignore  .env.example  .git_commit_msg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_PLAN.md  README.md  STATUS_REPORT.md  TODO.md  config.py  docker-compose.watchtower.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  docker.yml  integration-tests.yml  publish.yml  release-please.yml
app/: cli.py  queue_worker.py  scheduler.py
app/models/: database.py
app/modules/: asr.py  bilibili.py  bilibili_auth.py  correction.py  downloader.py  dynamic.py  feishu_docs.py  llm.py  processor.py  push.py  subtitle.py  wbi.py  whisper_ai.py
app/modules/push_channels/: __init__.py  base.py  feishu.py  telegram.py  wechat.py
app/tools/: classification_rules.py
app/utils/: init.py  logger.py  paths.py  whisper_downloader.py
demo/: prompt.txt
docs/: STATUS_REPORT.md  docker-plan.md  prompt.md
docs/superpowers/plans/: 2026-04-20-video-dynamics-unify.md
scripts/: batch_download.py  clear_uploader_videos.py  download_video.py  init_setup.py  manage_subscriptions.py  migrate_add_video_fields.py  migrate_paths.py  pre-push.sh  qrcode_login.py  rename_files.py  reset_processing.py  reset_videos.py  set_refresh_token.py  test_asr.py  test_asr_file.py  test_auth.py  test_processor.py
tests/: conftest.py  test_asr.py  test_bilibili.py  test_classification_rules.py  test_database.py  test_downloader.py  test_dynamic.py  test_feishu_docs.py  test_feishu_docs_integration.py  test_paths.py  test_prompt.py  test_push.py  test_queue_worker.py  test_subtitle.py  test_wbi.py
tests/integration/: test_video_dynamic_creation.py
tests/unit/: test_dynamic_parser.py
