[project]
name = "bili"
version = "0.1.0"
description = "B站UP主自动化摘要系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.11.1",
  "faster-whisper==1.2.1",
  "feishu-sdk==1.0.3",
  "httpx[socks]==0.25.2",
  "numpy==2.4.3",
  "onnxruntime==1.24.4",
  "openai==2.30.0",
  "dashscope>=1.25.15",
  "pillow==12.1.1",
  "pycryptodome==3.21.0",
  "pydantic==2.12.5",
  "python-dotenv==1.2.2",
  "python-telegram-bot==20.6",
  "requests==2.31.0",
  "schedule==1.2.0",
  "sqlalchemy==2.0.48",
  "typer>=0.9.0",
  "yt-dlp==2026.3.17",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
]

[project.scripts]
bili-rules = "app.tools.classification_rules:app"

[tool.setuptools]
packages = ["app", "app.modules", "app.models", "app.tools", "app.utils"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

