[project]
name = "bili"
version = "0.1.0"
description = "B站UP主自动化摘要系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.11.1",
  "faster-whisper==1.2.1",
  "feishu-sdk==1.0.3",
  "httpx[socks]==0.25.2",
  "numpy==2.4.3",
  "onnxruntime==1.24.4",
  "openai==2.30.0",
  "dashscope>=1.25.15",
  "pillow==12.1.1",
  "pycryptodome==3.21.0",
  "pydantic==2.12.5",
  "python-dotenv==1.2.2",
  "python-telegram-bot==20.6",
  "qrcode>=7.4",
  "requests>=2.31.0",
  "schedule==1.2.0",
  "sqlalchemy==2.0.48",
  "typer>=0.9.0",
  "yt-dlp==2026.3.17",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "ruff>=0.1.0",
]

[project.scripts]
bili = "app.cli:cli"
bili-rules = "app.tools.classification_rules:app"
bili-login = "app.cli:login"

[tool.setuptools]
packages = ["app", "app.modules", "app.models", "app.tools", "app.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/migrations/*",
  "*/mcp__playwright__*",
  # 难以单元测试的模块，需要集成测试
  "*/queue_worker.py",
  "*/scheduler.py",
  "*/processor.py",
  "*/tools/classification_rules.py",
  # 外部依赖模块
  "*/app/modules/whisper_ai.py",
  # CLI 命令，仅用于扫码登录，不做单元测试
  "*/app/cli.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod",
  "pass",
  "raise",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

